@@ -12,6 +12,7 @@
   * Add --text option (and corresponding .ngetrc option) to configure how nget handles text posts. (possible values of "files"(default, same as previous versions), "mbox"(store all text posts in one mbox format file, suggested by Steven Mueller), "ignore"(ignore all text posts, suggested by Naveen Nathan))
   * Include info in saved text files about any binaries decoded from that file.
   * Add --save-binary-info option (and corresponding .ngetrc option) to specify wether to save headers/decode info for posts that contain only binaries. (values of no(default, same as previous nget versions), yes).
+  * Extend server penalization so that servers can be penalized even if they don't disconnect after returning an error.  Now servers that give overquota errors without disconnecting will be penalized too.
 
 2002-08-04 v0.21:
   * Remove configure check for gcc<=2.7 since it can't really build nget anymore and the test was incorrectly detecting some gcc versions.
